gnome-shell (2.91.90-1) UNRELEASED; urgency=low

  * New upstream release.
    + Build depend on libtelepathy-glib-dev for the updated Telepathy
      integration.
    + Build depend on libpolkit-agent-1-dev for the new authorization dialogs.

 -- Frederic Peters <fpeters@debian.org>  Wed, 23 Feb 2011 10:24:23 +0100

gnome-shell (2.91.6-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/control.in:
    + Depend on gnome-control-center for My Account / System settings.

  [ Laurent Bigonville ]
  * New upstream release.
  * debian/control.in:
    - Bump build-dependencies
    - Add libecal1.2-dev, libedataserver1.2-dev and libedataserverui1.2-dev
      build-dependencies
    - Make mutter depends on libdconf0 | gsettings-backend instead of
      libdconf0 only

  [ Emilio Pozuelo Monfort ]
  * debian/control.in:
    + Update for the new gtk+ 3 package names.
    + Add missing dependency on gir1.2-gnomekbd-3.0.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 19 Feb 2011 16:45:48 +0000

gnome-shell (2.91.5-1) experimental; urgency=low

  * New upstream release.
    + debian/patches/02_fix_build_with_latest_gtk.patch:
      - Removed, fixed upstream.
    + debian/patches/01_favorite_apps.patch:
      - Refreshed.
    + debian/control.in:
      - Updated build dependencies.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 12 Jan 2011 23:41:41 +0000

gnome-shell (2.91.3-2) experimental; urgency=low

  * debian/control.in:
    - Build depend on libdconf0 for dconf-service. Closes: #595598.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 19 Dec 2010 16:36:11 +0000

gnome-shell (2.91.3-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * New upstream release (Closes: #605098, CVE-2010-4000).
    - debian/control.in:
      + Updated dependencies and build dependencies.
    - debian/patches/02_undo_gtk3_transition.diff:
      + Removed, let's use GTK+3 from now on.
    - debian/patches/03_fix_dconf_service_location.diff: