@@ -18,6 +18,8 @@ Build-Depends: cdbs,
                gir1.2-gtk-3.0,
                gir1.2-json-glib-1.0,
                gir1.2-mutter-2.91,
+               gir1.2-polkit-1.0,
+               gir1.2-telepathyglib-0.12,
                mutter (>= 2.91.90),
                libcroco3-dev (>= 0.6),
                libdbus-glib-1-dev,
@@ -60,6 +62,9 @@ Depends: ${gir:Depends},
          gnome-control-center (>= 2.91),
          gir1.2-gconf-2.0,
          gir1.2-gnomekbd-3.0,
+         gir1.2-polkit-1.0,
+         gir1.2-upower-1.0,
+         gir1.2-telepathyglib-0.12,
          python,
          pkg-config,
          mesa-utils
