@@ -4,6 +4,8 @@ gnome-shell (2.91.90-1) UNRELEASED; urgency=low
     + Build depend on libtelepathy-glib-dev for the updated Telepathy
       integration.
     + Build depend on libpolkit-agent-1-dev for the new authorization dialogs.
+    + Build depend, and depend, on appropriate gir packages (polkit,
+      telepathy, and upower).
 
  -- Frederic Peters <fpeters@debian.org>  Wed, 23 Feb 2011 10:24:23 +0100
 
